changing the 'qui suis-je'->'a propos', adding link of the school I've been, changing the theme color for smartphones (same color as the website), changing the email

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Alek Mikolajek">
     <meta name="google-site-verification" content="eoD5MpDI2csqRYG4p75Jfpnr57_2Ur5eMNWv6jt63UM" />
     <meta name="robots" content="index"/>
-    <meta name="theme-color" content="#05216b" />
+    <meta name="theme-color" content="#004190" />
     <link
       rel="icon"
       type="image/png"
@@ -40,7 +40,7 @@
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
       <nav class="navbarLink">
-        <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
+        <a href="/presentation.html" class="style-nav-links">A propos</a>
         <a href="/projet.html" class="style-nav-links">Mes projets</a>
         <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
@@ -50,7 +50,7 @@
           <span></span>
         </label>
         <ul class="menu__box">
-          <li><a class="menu__item" href="/presentation.html">Qui suis-je ?</a></li>
+          <li><a class="menu__item" href="/presentation.html">A propos</a></li>
           <li><a class="menu__item" href="/projet.html">Mes projets</a></li>
           <li><a class="menu__item" href="/contact.html">Contact</a></li>
         </ul>
@@ -66,7 +66,7 @@
         <h2>💻 Développeur web junior</h2>
         <h2>📍 France, Région parisienne</h2>
         <a href="./presentation.html">
-          <button class="button-style">Qui suis-je ?</button>
+          <button class="button-style">A propos</button>
         </a>
       </div>
     </section>
