--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -54,7 +54,7 @@
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
       <nav class="navbarLink">
-        <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
+        <a href="/presentation.html" class="style-nav-links">A propos</a>
         <a href="/projet.html" class="style-nav-links">Mes projets</a>
         <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
@@ -66,7 +66,7 @@
 
         <ul class="menu__box">
           <li>
-            <a class="menu__item" href="/presentation.html">Qui suis-je ?</a>
+            <a class="menu__item" href="/presentation.html">A propos</a>
           </li>
           <li><a class="menu__item" href="/projet.html">Mes projets</a></li>
           <li><a class="menu__item" href="/contact.html">Contact</a></li>
