--- a/presentation.html
+++ b/presentation.html
@@ -36,7 +36,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./assets/script/script.js"></script>
-    <title>Qui suis-je ? - Alek Mikolajek</title>
+    <title>A propos - Alek Mikolajek</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -54,7 +54,7 @@
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
       <nav class="navbarLink">
-        <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
+        <a href="/presentation.html" class="style-nav-links">A propos</a>
         <a href="/projet.html" class="style-nav-links">Mes projets</a>
         <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
@@ -66,7 +66,7 @@
 
         <ul class="menu__box">
           <li>
-            <a class="menu__item" href="/presentation.html">Qui suis-je ?</a>
+            <a class="menu__item" href="/presentation.html">A propos</a>
           </li>
           <li><a class="menu__item" href="/projet.html">Mes projets</a></li>
           <li><a class="menu__item" href="/contact.html">Contact</a></li>
@@ -78,9 +78,9 @@
       <div class="infos card-style">
         <h2>Résumé</h2>
         <p>
-          Développeur web PHP en formation à la Wild Code School. Je suis
+          Développeur web issu de formations chez la <a class="link-color" href="https://www.wildcodeschool.com">Wild Code School</a>, le <a class="link-color" href="https://www.cnam.fr/">CNAM</a> et <a class="link-color" href="https://lamanu.fr/">LA MANU</a>. Je suis
           disponible pour une nouvelle aventure à partir de
-          <strong>novembre 2024</strong>.
+          <strong>octobre 2024</strong>.
         </p>
       </div>
       <div class="competences card-style">
