--- a/projet.html
+++ b/projet.html
@@ -51,7 +51,7 @@
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
       <nav class="navbarLink">
-        <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
+        <a href="/presentation.html" class="style-nav-links">A propos</a>
         <a href="/projet.html" class="style-nav-links">Mes projets</a>
         <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
@@ -62,9 +62,7 @@
         </label>
 
         <ul class="menu__box">
-          <li>
-            <a class="menu__item" href="/presentation.html">Qui suis-je ?</a>
-          </li>
+          <li><a class="menu__item" href="/presentation.html">A propos</a></li>
           <li><a class="menu__item" href="/projet.html">Mes projets</a></li>
           <li><a class="menu__item" href="/contact.html">Contact</a></li>
         </ul>
