adding the theme color on every pages for smartphones

--- a/presentation.html
+++ b/presentation.html
@@ -20,7 +20,7 @@
     <meta name="description" content="Découvrez qui je suis." />
     <meta name="author" content="Alek Mikolajek" />
     <meta name="robots" content="index" />
-    <meta name="theme-color" content="#05216b" />
+    <meta name="theme-color" content="#004190" />
     <link
       rel="icon"
       type="image/png"
