--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     />
     <meta name="author" content="Alek Mikolajek" />
     <meta name="robots" content="index" />
-    <meta name="theme-color" content="#05216b" />
+    <meta name="theme-color" content="#004190" />
     <link
       rel="icon"
       type="image/png"
