modify my presentation

--- a/presentation.html
+++ b/presentation.html
@@ -79,8 +79,8 @@
         <h2>Résumé</h2>
         <p>
           Développeur web issu de formations chez la <a class="link-color" href="https://www.wildcodeschool.com">Wild Code School</a>, le <a class="link-color" href="https://www.cnam.fr/">CNAM</a> et <a class="link-color" href="https://lamanu.fr/">LA MANU</a>. Je suis
-          disponible pour une nouvelle aventure à partir de
-          <strong>octobre 2024</strong>.
+          disponible pour une nouvelle aventure
+          <strong>dès maintenant !</strong>.
         </p>
       </div>
       <div class="competences card-style">
