modify alt for twig image

--- a/presentation.html
+++ b/presentation.html
@@ -90,12 +90,12 @@
             <h3><img src="./assets/img/PHP-logo.svg.png" alt="PHP" /></h3>
           </li>
           <li><img src="./assets/img/twig-removebg.png" alt="Twig" /></li>
-          <li><img src="./assets/img/composer-logo.png" alt="Twig" /></li>
+          <li><img src="./assets/img/composer-logo.png" alt="Composer" /></li>
           <li>
             <h3><img src="./assets/img/html-logo.png" alt="HTML" /></h3>
           </li>
           <li>
-            <h3><img src="./assets/img/CSS3_logo.png" alt="CSS" /></h3>
+            <h3><img src="./assets/img/CSS3_logo.png" alt="CSS3" /></h3>
           </li>
           <li><img src="./assets/img/MySQL.png" alt="MySQL" /></li>
           <li><img src="./assets/img/Git-Logo-White.png" alt="Git" /></li>
